# AO-PONTO-BACKEND

./: .env_exemplo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 18d5eeb66a89_pop.py  6e945276d216_init_db.py
app/: main.py
app/api/: __init__.py
app/api/v1/endpoints/: __init__.py  aluno_turmas.py  alunos.py  cardapio.py  cardapio_escola.py  disciplinas.py  escolas.py  frequencias.py  login.py  papel.py  relatorio_merendeiras.py  salas.py  turmas.py  usuario.py
app/auth/: auth.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  base_class.py  init_db.py  session.py
app/error/: __init__.py  custom_exception.py
app/models/: __init__.py  aluno_turmas_model.py  alunos_model.py  cardapio_escola_model.py  cardapio_model.py  disciplinas_model.py  escolas_model.py  frequencias_model.py  papel_model.py  relatorio_merendeiras_model.py  salas_model.py  turmas_model.py  usuario_model.py
app/schema/: __init__.py  aluno_turmas.py  alunos.py  cardapio.py  cardapio_escola.py  disciplinas.py  escolas.py  frequencias.py  login_schema.py  papel.py  relatorio_merendeiras.py  role.py  role_schema.py  salas.py  turmas.py  user.py  user_role.py  user_role_schema.py  user_schema.py  usuario.py
app/templates/: new_account.html
app/util/: __init__.py  annotated.py  email.py  functions.py  validators.py
docs/: index.md
docs/app/api/endpoints/: alunos.md  alunoturmas.md  cardapio.md  cardapioescola.md  disciplinas.md  escolas.md  frequencias.md  papel.md  relatoriomerendeiras.md  salas.md  turmas.md  usuario.md
docs/app/models/: alunos.md  alunoturmas.md  cardapio.md  cardapioescola.md  disciplinas.md  escolas.md  frequencias.md  papel.md  relatoriomerendeiras.md  salas.md  turmas.md  usuario.md
docs/app/schema/: alunos.md  alunoturmas.md  cardapio.md  cardapioescola.md  disciplinas.md  escolas.md  frequencias.md  login.md  papel.md  relatoriomerendeiras.md  salas.md  turmas.md  usuario.md
tests/: test_auth.py  test_custom_exception.py  test_email.py  test_file.py  test_functions.py  test_models.py  test_validators.py
